# TinyEdgeLLMAgents

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: dispatcher.rs  lib.rs  main.rs  memory.rs  planner.rs
core/: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  debug.sh  download_model.sh  test.sh
core/examples/: complex_prompt.json  complex_prompt.out  simple_prompt.json  simple_prompt.out
core/src/: lib.rs  main.rs
tools/fetch/: Cargo.toml
tools/fetch/src/: main.rs
tools/math/: Cargo.toml
tools/math/src/: main.rs
tools/shell/: Cargo.toml
tools/shell/src/: main.rs
