[package]
name = "fetch-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = []
network = ["reqwest", "tokio"]

# WASM target için network desteği kapalı
[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM için network yok, simulate edeceğiz 